--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,8 @@
 	
 	<!-- 编码过滤器 -->
 	<filter>
-		<filter-name>encodingFilter</filter-name>
+		<filter-name>
+	encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
 		<async-supported>true</async-supported>
 		<init-param>
